--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,68 +1,53 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo+2:ital,wght@0,100..900;1,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Sora:wght@100..800&family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libertinus+Sans:ital,wght@0,400;0,700;1,400&display=swap');
+@import "tailwindcss";
+.sweep{
+    background-color:black;
+background-image: 
+radial-gradient(at 80% 20%, hsla(212,100%,50%,0.2),transparent 50%),
+radial-gradient(at 20% 80% ,hsla(190,100%,50%,0.2),transparent 50%);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.jet {
+  font-family: "JetBrains Mono", monospace;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.space {
+  font-family: "Space Grotesk", sans-serif;
+ 
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.sora {
+  font-family: "Sora", sans-serif;
+ 
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+.exo {
+  font-family: "Exo 2", sans-serif;
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+}
+.bebas{
+  font-family: "Bebas Neue", sans-serif;
+ 
+}
+@keyframes scrolling{
+  0% {
+    transform: translateX(0%);
   }
-  a:hover {
-    color: #747bff;
+
+  100%{
+    transform: translateX(-50%);
   }
-  button {
-    background-color: #f9f9f9;
-  }
+}
+.scroll{
+ animation: scrolling 15s linear infinite ;
+
+}
+
+.quote{
+   font-family: "Kode Mono", monospace;
+}
+.star{
+   font-family: "Libertinus Sans", sans-serif;
 }
